# otus-cpp-hw1.1

./: CMakeLists.txt  filters.cpp  filters.hpp  gtest_filters.cpp  main.cpp  ver.cpp
.github/workflows/: release.yml
test/: testfile1.tsv
